# HIPPO_Gym

./: .dockerignore  .gitignore  .gitmodules  .projectConfig.yml  .pylintrc  Dockerfile  LICENSE  README.md  config.yml  grid_main.py  main.py  other_main.py  play_lunar_lander.py  pyproject.toml  requirements-dev.txt  requirements-examples.txt  requirements.txt  setup.py  start.sh  updateProject.py  xvfb.sh
.github/workflows/: python-coverage.yml  python-pypi.yml  python_pylint.yml  python_tests.yml  python_tests_end_to_end.yml
App/: .trialConfig.yml  __main__.py  agent copy.py  agent.py  coachAgent.py  communicator.py  fingerprint.py  grid.py  hippo_pygame.py  librairy_handler.py  library_handler.py  message_handler.py  mockTrial.py  my_agent.py  my_handler.py  optionAgent.py  original_trial.py  predict.py  preprocess.py  pygame_handler.py  tamerAgent.py  temp_trial2.py  trial.py  utils.py  websocket.py  xvfb.sh
App/Fingerprints/: B101X9I_1_1.FingerNet.xml  B101X9I_1_1.MinutiaNet.xml  B102X0I_1_1.FingerNet.xml  B102X0I_1_1.MinutiaNet.xml  B104X8I_1_1.FingerNet.xml  B104X8I_1_1.MinutiaNet.xml  B105X2I_1_1.FingerNet.xml  B105X2I_1_1.MinutiaNet.xml  B106X8I_1_1.FingerNet.xml  B106X8I_1_1.MinutiaNet.xml  B107X9I_1_1.FingerNet.xml  B107X9I_1_1.MinutiaNet.xml  B108X6I_1_1.FingerNet.xml  B108X6I_1_1.MinutiaNet.xml  B109X4I_1_1.FingerNet.xml  B109X4I_1_1.MinutiaNet.xml  B110X6I_1_1.FingerNet.xml  B110X6I_1_1.MinutiaNet.xml  B111X7I_1_1.FingerNet.xml  B111X7I_1_1.MinutiaNet.xml  B112X2I_1_1.FingerNet.xml  B112X2I_1_1.MinutiaNet.xml  B114X3I_1_1.FingerNet.xml  B114X3I_1_1.MinutiaNet.xml  B115X8I_1_1.FingerNet.xml  B115X8I_1_1.MinutiaNet.xml  B116X6I_1_1.FingerNet.xml  B116X6I_1_1.MinutiaNet.xml  B117X0I_1_1.FingerNet.xml  B117X0I_1_1.MinutiaNet.xml  B118X8I_1_1.FingerNet.xml  B118X8I_1_1.MinutiaNet.xml  B119X0I_1_1.FingerNet.xml  B119X0I_1_1.MinutiaNet.xml  B120X9I_1_1.FingerNet.xml  B120X9I_1_1.MinutiaNet.xml  B121X7I_1_1.FingerNet.xml  B121X7I_1_1.MinutiaNet.xml  B122X4I_1_1.FingerNet.xml  B122X4I_1_1.MinutiaNet.xml  (+474 more)
App/XML/: U288X6I_1_1.xml  U289X6I_1_1.xml  U289X6I_1_1_Nadeen.xml  U289X6I_1_1_Nadeen1.xml  U289X6I_1_1_Nadeen2.xml  U290X4I_1_1.xml  U290X4I_1_11.xml  U290X4I_1_12.xml  U290X4I_1_13.xml  U290X4I_1_1_Nadeen.xml  U290X4I_1_1_Nadeen1.xml  U290X4I_1_1_Nadeen10.xml  U290X4I_1_1_Nadeen11.xml  U290X4I_1_1_Nadeen12.xml  U290X4I_1_1_Nadeen13.xml  U290X4I_1_1_Nadeen14.xml  U290X4I_1_1_Nadeen15.xml  U290X4I_1_1_Nadeen16.xml  U290X4I_1_1_Nadeen17.xml  U290X4I_1_1_Nadeen18.xml  U290X4I_1_1_Nadeen19.xml  U290X4I_1_1_Nadeen2.xml  U290X4I_1_1_Nadeen20.xml  U290X4I_1_1_Nadeen21.xml  U290X4I_1_1_Nadeen22.xml  U290X4I_1_1_Nadeen23.xml  U290X4I_1_1_Nadeen24.xml  U290X4I_1_1_Nadeen25.xml  U290X4I_1_1_Nadeen26.xml  U290X4I_1_1_Nadeen27.xml  U290X4I_1_1_Nadeen28.xml  U290X4I_1_1_Nadeen29.xml  U290X4I_1_1_Nadeen3.xml  U290X4I_1_1_Nadeen30.xml  U290X4I_1_1_Nadeen31.xml  U290X4I_1_1_Nadeen32.xml  U290X4I_1_1_Nadeen33.xml  U290X4I_1_1_Nadeen34.xml  U290X4I_1_1_Nadeen35.xml  U290X4I_1_1_Nadeen36.xml  (+26 more)
App/agents/: __init__.py  agent.py  craftingAgent.py  my_agent.py  tamerAgent.py
App/data/: more_trials.json  (+6 more)
StepFiles/: 10_bonus_amount.html  10_quiz_instructions.html  10_training_notification_page.html  11_cheat_sheet_instructions_reminder.html  11_quiz.html  11_user_attitude_survey.html  12_pre_test_notification_page.html  13_training_notification_page.html  13_user_attitude_survey.html  14_demographic_survey_questions.html  14_testing_notification_page.html  15_bonus_amount.html  16_user_attitude_survey.html  17_demographic_survey_questions.html  18_end_of_survey_thankyou.html  1_consentForm.html  2_intro_instructions.html  3_flight_planning_intro.html  3_node_inspector.html  4_flight_planning_intro2.html  4_node_inspector.html  5_additional_info.html  5_node_inspector.html  6_additional_info.html  6_practice_makes_perfect.html  6_rewards_costs.html  7_graph_structure_info.html  7_quiz_instructions.html  7_train_test_instruction.html  8_quiz.html  8_train_test_instruction.html  9_cognitive_tutor_instructions.html  Consent.html  PostSurvey.html  PreSurvey.html  Thank.html  consent.html  exampleConsent.html  exampleQuiz.html  exampleSurvey.html  (+7 more)
Trials/: MockFileCSV.csv
docs/: UML_class_diagram.uxf
examples/: crafting_example.py  grid.py  grid_main.py  hcraft_example.py  lunar_lander.py  main.py  minigrid.py  minigrid_example.py  other_main.py  text_box.py
hippo_gym/: bucketer.py  communicator.py  control_message_handler.py  grid_message_handler.py  hippo_gym.py  queue_handler.py  textbox_message_handler.py  window_message_handler.py
tests/: __init__.py  fakes.py
(+118 files in other folders)
