[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]

[project]
name = "hippogym"

dynamic = ["version", "readme", "dependencies"]
license = {text = "Apache-2.0"}
requires-python = ">=3.7"


[tool.poetry]
authors = [
    {name = "Nick Nissen", email = "nnissen@ualberta.ca"},
]
maintainers = [
    {name = "Mathïs Fédérico", email = "mathfederico@gmail.com"},
]
homepage="https://hippogym.irll.net"
repository="https://github.com/IRLL/HIPPO_Gym"
documentation = "https://hippogym.irll.net/"
keywords = ["gym", "human", "loop", "reinforcement", "learning"]

[project.optional-dependencies]
pyvis = ["pyvis"]

[tool.setuptools]
license-files = ['LICEN[CS]E*', 'COPYING*', 'NOTICE*', 'AUTHORS*']

[project.scripts]
hippogym = "hippogym.__main__:main"

[tool.setuptools.dynamic]
readme = {file = ["README.md"]}
dependencies = {file = ["requirements.txt"]}

[tool.setuptools_scm]

[tool.pytest.ini_options]
testpaths = ["tests"]
